--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Место</title>
   </head>
   <body class="body">
@@ -15,43 +15,97 @@
         <section class="profile">
           <div class="profile__avatar" role="img"></div>
           <div class="profile__info">
-            <h2 class="profile__title">Жак-Ив Кусто</h2>
-            <button type="button" class="profile__edit-button" role="img"></button>
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button type="button" class="profile__edit-button"></button>
             <p class="profile__subtitle">Исследователь океана</p>
           </div>
-          <button type="button" class="profile__add-button" role="img"></button>
+          <button type="button" class="profile__add-button"></button>
         </section>
         <section class="elements">
           <div class="element">
-            <img class ="element__image" src="images/karachaevsk.jpg" alt="карачаевск">
-            <h3 class="element__title">Карачаевск<button type="button" class="element__like-button"></button></h3>
+            <img
+              class="element__image"
+              src="images/karachaevsk.jpg"
+              alt="карачаевск"
+            >
+            <div class="element__description">
+              <h2 class="element__title">Карачаевск</h2>
+              <button type="button" class="element__like-button"></button>
+            </div>
           </div>
           <div class="element">
-            <img class ="element__image" src="images/elbrus.jpg" alt="эльбрус">
-            <h3 class="element__title">Гора Эльбрус<button type="button" class="element__like-button"></button></h3>
-
+            <img class="element__image" src="images/elbrus.jpg" alt="эльбрус">
+            <div class="element__description">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button type="button" class="element__like-button"></button>
+            </div>
           </div>
           <div class="element">
-            <img class ="element__image" src="images/dombai.svg" alt="домбай">
-            <h3 class="element__title">Домбай<button type="button" class="element__like-button"></button></h3>
+            <img class="element__image" src="images/dombai.svg" alt="домбай">
+            <div class="element__description">
+              <h2 class="element__title">Домбай</h2>
+              <button type="button" class="element__like-button"></button>
+            </div>
           </div>
           <div class="element">
-            <img class ="element__image" src="images/elbrus.jpg" alt="эльбрус">
-            <h3 class="element__title">Гора Эльбрус<button type="button" class="element__like-button"></button></h3>
+            <img class="element__image" src="images/elbrus.jpg" alt="эльбрус">
+            <div class="element__description">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button type="button" class="element__like-button"></button>
+            </div>
           </div>
           <div class="element">
-            <img class ="element__image" src="images/dombai.svg" alt="домбай">
-            <h3 class="element__title">Домбай<button type="button" class="element__like-button"></button></h3>
+            <img class="element__image" src="images/dombai.svg" alt="домбай">
+            <div class="element__description">
+              <h2 class="element__title">Домбай</h2>
+              <button type="button" class="element__like-button"></button>
+            </div>
           </div>
           <div class="element">
-            <img class ="element__image" src="images/karachaevsk.jpg" alt="карачаевск">
-            <h3 class="element__title">Карачаевск<button type="button" class="element__like-button"></button></h3>
+            <img
+              class="element__image"
+              src="images/karachaevsk.jpg"
+              alt="карачаевск"
+            >
+            <div class="element__description">
+              <h2 class="element__title">Карачаево-Черкессия</h2>
+              <button type="button" class="element__like-button"></button>
+            </div>
           </div>
         </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
       </footer>
+      <div class="popup popup_opened">
+        <div class="popup__container">
+          <button class="popup__close-button" type="button"></button>
+          <h3 class="edit-form__heading">Редактировать профиль</h3>
+          <form class="edit-form">
+            <fieldset class="edit-form__input-container edit-form__input-container_ctrl_texts">
+              <input
+                type="text"
+                class="edit-form__item edit-form__item_el_name"
+                placeholder="Жак-Ив Кусто"
+                id="profile-name"
+                name="profile-name"
+              >
+              <div class="edit-form__line"></div>
+              <input
+                type="text"
+                class="edit-form__item edit-form__item_el_about"
+                placeholder="Исследователь океана"
+                id="profile-about"
+                name="profile-about"
+              >
+              <div class="edit-form__line"></div>
+            </fieldset>
+            <fieldset class="edit-form__handlers">
+              <button class="edit-form__button" type="submit">Сохранить</button>
+            </fieldset>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
