--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="body">
     <div class="page">
       <header class="header">
-        <a href="index.html"
+        <a href="./"
           ><img class="header__logo" src="./images/logo.svg" alt="логотип">
         </a>
       </header>
