--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <footer class="footer">
         <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
       </footer>
-      <div class="popup">
+      <div class="popup popup_opened">
         <div class="popup__container">
           <button
             class="popup__close-button"
