--- a/index.html
+++ b/index.html
@@ -139,6 +139,6 @@
         </div>
       </template>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
