improvements and modifications after review

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Место</title>
   </head>
   <body class="body">
     <div class="page">
       <header class="header">
         <a href="./"
-          ><img class="header__logo" src="./images/logo.svg" alt="логотип" />
+          ><img class="header__logo" src="./images/logo.svg" alt="логотип">
         </a>
       </header>
       <main class="content">
@@ -34,33 +34,32 @@
           ></button>
         </section>
         <section class="cards"></section>
-      </main>
-      <template class="card-template">
-        <article class="card">
-          <img class="card__image" />
-          <button
-            type="button"
-            class="card__delete-button"
-            aria-label="удалить"
-          ></button>
-          <div class="card__description">
-            <h2 class="card__title"></h2>
+        <template class="card-template">
+          <article class="card">
+            <img class="card__image">
             <button
               type="button"
-              class="card__like-button"
-              aria-label="нравится"
+              class="card__delete-button"
+              aria-label="удалить"
             ></button>
-          </div>
-        </article>
-      </template>
+            <div class="card__description">
+              <h2 class="card__title"></h2>
+              <button
+                type="button"
+                class="card__like-button"
+                aria-label="нравится"
+              ></button>
+            </div>
+          </article>
+        </template>
+      </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2021. Mesto Russia</p>
       </footer>
-      <div class="popup" id="popup-profile">
+      <div class="popup popup_type_profile">
         <div class="popup__container">
           <button
-            class="popup__close-button"
-            id="profile-close"
+            class="popup__close-button popup__close-button_type_profile"
             type="button"
             aria-label="закрыть"
           ></button>
@@ -73,28 +72,27 @@
             >
               <input
                 type="text"
-                class="edit-form__item edit-form__item_el_name"
-                placeholder="Жак-Ив Кусто"
+                class="edit-form__item edit-form__item_element_name"
+                placeholder="Имя"
                 id="profile-name"
                 name="profile-name"
-              />
+              >
               <input
                 type="text"
-                class="edit-form__item edit-form__item_el_about"
-                placeholder="Исследователь океана"
+                class="edit-form__item edit-form__item_element_about"
+                placeholder="О себе"
                 id="profile-about"
                 name="profile-about"
-              />
+              >
             </fieldset>
             <button class="edit-form__button" type="submit">Сохранить</button>
           </form>
         </div>
       </div>
-      <div class="popup" id="popup-place">
+      <div class="popup popup_type_place-add">
         <div class="popup__container">
           <button
-            class="popup__close-button"
-            id="place-close"
+            class="popup__close-button popup__close-button_type_place"
             type="button"
             aria-label="закрыть"
           ></button>
@@ -112,33 +110,33 @@
                 placeholder="Название"
                 id="place-name"
                 name="place-name"
-              />
+              >
               <input
                 type="text"
                 class="place-form__item place-form__item_el_link"
                 placeholder="Ссылка на картинку"
                 id="place-link"
                 name="place-link"
-              />
+              >
             </fieldset>
             <button class="place-form__button" type="submit">Создать</button>
           </form>
         </div>
       </div>
-      <div class="image-popup"></div>
-      <template class="imgpopup-template">
-        <div class="image-popup__container">
+      <div class="popup popup_type_image">
+        <div class="popup__picture-block">
+          <img class="popup__picture" src="#" alt="#">
           <button
-            class="image-popup__close-button"
+            class="popup__close-button popup__close-button_type_image"
             id="image-close"
             type="button"
             aria-label="закрыть"
           ></button>
-          <img class="image-popup__picture" />
-          <p class="image-popup__heading"></p>
+          <p class="popup__description"></p>
         </div>
-      </template>
+      </div>
     </div>
+    <script src="scripts/initial-cards.js"></script>
     <script src="scripts/script.js"></script>
   </body>
 </html>
