changes after 1-st review

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="html">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,7 +77,7 @@
                 name="profile-name"
                 required
                 minlength="2"
-                maxlength="10"
+                maxlength="40"
               >
               <span class="popup__form-error" id="profile-name-error"></span>
               <input
