card delete popup added

--- a/src/index.html
+++ b/src/index.html
@@ -190,6 +190,23 @@
           </form>
         </div>
       </div>
+      <div class="popup popup_type_delete-card">
+        <div class="popup__container">
+          <button
+            class="popup__close-button popup__close-button_type_delete"
+            type="button"
+            aria-label="закрыть"
+          ></button>
+          <h3 class="popup__heading popup__heading_type_delete-card">Вы уверены?</h3>
+            <button
+              class="popup__submit-button popup__delete-button"
+              type="submit"
+            >
+              Да
+            </button>
+          </form>
+        </div>
+      </div>
       <div class="popup popup_type_image">
         <div class="popup__picture-block">
           <img class="popup__picture" src="#" alt="#" />
