--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
           ></button>
         </section>
         <section class="cards"></section>
-        <template class="card-template">
+        <template class="card-template" id="card-template">
           <article class="card">
             <img class="card__image" />
             <button
